# opengov-insights-api

./: .gitignore  main.py  pyproject.toml
config/: settings.py
connectors/: base.py  diario_oficial_mossoro.py  transparency_mossoro.py
docs/: canonical-data-model.md  data-sources.md  project-overview.md
jobs/: receita_pipeline.py
pipelines/extract/: extract_mossoro.py
pipelines/load/: load_postgres.py
pipelines/transform/: transform_receita.py
writers/: json_writer.py  parquet_writer.py
