[project]
name = "opengov-insights-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "polars>=1.42.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-pythonpath>=0.7.3",
    "ruff>=0.15.20",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
